--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/theslip/react-chartist-plugin-accessibility#readme",
   "dependencies": {
     "chartist": "^0.10.1",
-    "node-uuid": "^1.4.7"
+    "node-uuid": "^1.4.7",
+    "react": "^15.4.2"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
