--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-chartist-plugin-accessibility",
   "version": "1.1.2",
-  "description": "",
+  "description": "React accessibility plugin for react-chartist",
   "main": "index.js",
   "scripts": {
     "build": "babel src --out-dir dist",
