--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "homepage": "https://github.com/theslip/react-chartist-plugin-accessibility#readme",
   "dependencies": {
     "chartist": "^0.10.1",
-    "node-uuid": "^1.4.7",
-    "react": "^15.4.2"
+    "react": "^15.4.2",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
